# neural_network_learning

./: README.md  pyproject.toml
micro_grad/: exp_notebook.ipynb
micro_grad/part-1-manual-backprop/: graph_utils.py
